--- a/SalesforceClient.csproj
+++ b/SalesforceClient.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="RequestHelper.cs" />
     <Compile Include="RestAPIClient.cs">
       <SubType>Form</SubType>
     </Compile>
